kubernetes/service.yml
apiVersion: v1
kind: Service
metadata: 
  name: capi-frontend
  labels:
    app: capi-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000 
    protocol: TCP
    name: http
  selector:
    app: capi-frontend
  
---
apiVersion: v1 
kind: Service
metadata:
  name: capi-backend
  labels:
    app: capi-backend
spec:
  type: ClusterIP
  ports:
  - port: 3001 
    targetPort: 3001
    protocol: TCP
    name: http
  selector:
    app: capi-backend

# Worker tidak perlu service karena tidak diakses dari luar
